[JSC] Fix DataFormatJSBigInt32 missing part https://bugs.webkit.org/show_bug.cgi?id=210986

Reviewed by Mark Lam.

Add missing part of DataFormatJSBigInt32 implementation.

* bytecode/DataFormat.h:
(JSC::dataFormatToString):
* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::checkGeneratedTypeForToInt32):


Canonical link: https://commits.webkit.org/223881@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260674 268f45cc-cd09-0410-ab3c-d52691b4dbfc