Source/JavaScriptCore/bytecode/DataFormat.h
@@ -44,7 +44,7 @@ enum DataFormat : uint8_t {
     DataFormatBoolean = 5,
     DataFormatCell = 6,
     DataFormatStorage = 7,
-    DataFormatBigInt32 = 8, // FIXME: currently unused
+    DataFormatBigInt32 = 8, // FIXME: https://bugs.webkit.org/show_bug.cgi?id=210957 Actually support BigInt32 DataFormat.
     DataFormatJS = 16,
     DataFormatJSInt32 = DataFormatJS | DataFormatInt32,
     DataFormatJSDouble = DataFormatJS | DataFormatDouble,
@@ -78,6 +78,8 @@ inline const char* dataFormatToString(DataFormat dataFormat)
         return "Boolean";
     case DataFormatStorage:
         return "Storage";
+    case DataFormatBigInt32:
+        return "BigInt32";
     case DataFormatJS:
         return "JS";
     case DataFormatJSInt32:
@@ -88,6 +90,8 @@ inline const char* dataFormatToString(DataFormat dataFormat)
         return "JSCell";
     case DataFormatJSBoolean:
         return "JSBoolean";
+    case DataFormatJSBigInt32:
+        return "JSBigInt32";
     case DataFormatDead:
         return "Dead";
     default:
